--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index",
-        "dev": "nodemon index",
-        "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "node server",
+      "dev": "nodemon server",
+      "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "Steven Ferreira",
+    "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.16.4",
-        "mysql": "^2.16.0"
+      "body-parser": "^1.19.0",
+      "express": "^4.16.4",
+      "mysql": "^2.16.0",
+      "save": "^2.4.0",
+      "uuid": "^3.3.3"
     },
     "devDependencies": {
-        "nodemon": "^2.0.1"
+      "nodemon": "^2.0.1"
     }
-}
+  }
