--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node server",
+      "start": "node server.js",
       "dev": "nodemon server",
       "test": "echo \"Error: no test specified\" && exit 1"
     },
