--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-    "name": "note-taker",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "body-parser": "^1.19.0",
-      "express": "^4.16.4",
-      "mysql": "^2.16.0",
-      "save": "^2.4.0",
-      "uuid": "^3.3.3"
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.1"
-    }
+  "name": "note-taker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "mysql": "^2.16.0",
+    "save": "^2.4.0",
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
+}
