--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "start": "node server",
+        "start": "node server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "",
+    "author": "Steven Ferreira",
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
@@ -15,5 +15,8 @@
         "mysql": "^2.16.0",
         "save": "^2.4.0",
         "uuid": "^3.3.3"
+    },
+    "engines": {
+        "node": "12.x"
     }
 }
